--- a/components/styles.css
+++ b/components/styles.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
 
+
+
 *
 {
     position:relative;
@@ -42,31 +44,55 @@
 }
 .Stack dl
 {
-    padding-bottom:1rem;
 }
+.Stack dl.Open
+{
+    border-left: 1px solid #ddd;
+    padding-bottom:1rem;
+    margin-top:1rem;
+    margin-bottom:1rem;
+}
+.Stack dl.Open dt
+{
+    margin-bottom:1rem;
+    padding-top:0.3rem;
+    padding-bottom:0.3rem;
+}
+.Stack dl.Open dd
+{
+    display:block;
+}
+
 .Stack dt
 {
     border-bottom:1px solid #ddd;
-    margin-bottom:1rem;
+    padding:0.3rem 0.3rem 0.3rem 1rem;
     overflow:hidden;
 
+    cursor:pointer;
     font-size:1.5rem;
 }
 .Stack dt strong
 {
     display:block;
-    float:right;
-    padding:1rem;
+    float:left;
     font-size:1.0rem;
 }
 .Stack dt span
 {
     display:block;
-    float:left;
-    padding:15px;
+    float:right;
+    padding:0.2rem 0.5rem 0.2rem 0.5rem;
+
+    background:#94b9ea;
+    border-radius:5px;
+
+    color:#fff;
+    font-size:0.8rem;
 }
 .Stack dd
 {
+    display:none;
     padding:0 0 0 1rem;
     margin-bottom:0.8rem;
     overflow:hidden;
@@ -76,13 +102,13 @@
     display:block;
     font-weight:lighter;
     font-size:1.0rem;
-    
 }
 .Stack dd a
 {
     display:block;
+    border-top:1px dotted #ddd;
 
-    color:#666;
+    color:#4e85ce;
     font-size:0.8rem;
     text-decoration:none;
 }
@@ -93,6 +119,7 @@
 }
 
 
+
 .Tabular
 {
     width:100%;
@@ -101,20 +128,13 @@
 .Tabular table
 {
     width:100%;
-    background:#f5f5f5;
-    box-shadow:0px 3px 5px rgba(0, 0, 0, 0.2);
 }
 /*column headers*/
 .Tabular th
 {
     position:relative;
     height:40px;
-
-    background:#ab131b;
-
     padding:5px;
-    border-left: 1px solid #c33d45;
-    color:#fff;
     text-align:center;
     font-size:0.9em;
 }
